compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__inline_function_with_use_and_anonymous.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\nimport gleam/bool\n\npub fn divide(a, b) {\n  use <- bool.lazy_guard(b == 0, fn() { panic as \"Cannot divide by 0\" })\n  a / b\n}\n"
---
----- SOURCE CODE

import gleam/bool

pub fn divide(a, b) {
  use <- bool.lazy_guard(b == 0, fn() { panic as "Cannot divide by 0" })
  a / b
}


----- COMPILED JAVASCRIPT
import * as $bool from "../../gleam_stdlib/gleam/bool.mjs";
import { makeError, divideInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function divide(a, b) {
  let $ = b === 0;
  if ($) {
    throw makeError(
      "panic",
      FILEPATH,
      "my/mod",
      5,
      "divide",
      "Cannot divide by 0",
      {}
    )
  } else {
    return divideInt(a, b);
  }
}
