compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__inline_variable_shadowed_in_case_pattern.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\npub fn sum() {\n  let a = 10\n  let b = 20\n\n  fn(x) {\n    case 7, 8 {\n      a, b -> a + b + x\n    }\n  }(a + b)\n\n  a + b\n}\n"
---
----- SOURCE CODE

pub fn sum() {
  let a = 10
  let b = 20

  fn(x) {
    case 7, 8 {
      a, b -> a + b + x
    }
  }(a + b)

  a + b
}


----- COMPILED JAVASCRIPT
export function sum() {
  let a = 10;
  let b = 20;
  let $ = 7;
  let $1 = 8;
  let _inline_a_0 = $;
  let _inline_b_1 = $1;
  (_inline_a_0 + _inline_b_1) + (a + b);
  return a + b;
}
