compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__inlining_works_through_blocks.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\npub fn main() {\n    { fn(x) { Ok(x + 1) } }(41)\n}\n"
---
----- SOURCE CODE

pub fn main() {
    { fn(x) { Ok(x + 1) } }(41)
}


----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export function main() {
  {
    let x = 41;
    return new Ok(x + 1);
  }
}
